2003-07-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* GNUmakefile.in: remove no kpathsea hack.

	* Documentation/topdocs/INSTALL.texi (Top): remove web-doc from
	doco.

	* GNUmakefile.in: remove web-doc target.

	* lily/all-font-metrics.cc (find_afm): add message about
	buildscripts/clean-fonts.sh 

	* scm/define-music-properties.scm (figure): use string for 'figure

	* lily/parser.yy (bass_number): allow strings for bassfigure too. 

	* input/regression/ : add raggedright = ##t where applicable. 
	
	* scm/bass-figure.scm (make-bass-figure-markup): add
	alignBassFigureAccidentals property.

	* lily/volta-bracket.cc (brew_molecule): only put text on 1st
	bracket.

	* lily/hyphen-spanner.cc (set_spacing_rods): new function: take
	syllables widths into account for minimum-length.

	* input/test/staff-container.ly: update file

	* input/test/stem.ly: remove

	* lily/event.cc (LY_DEFINE): add ly: prefix.

	* input/test/clef-manual-control.ly: from manual-clef

	* input/test/repeat-shorter-bracket.ly: move from coda-kludge 

	* input/test/different-time-signatures.ly: move to poly-metric.ly

	* input/test/hara-kiri*,scales.ly: remove
	
	* input/test/chord-names-dpnj.ly (efullmusic): remove file (merged
	with chord-names-jazz.ly)

	* make/mutopia-rules.make ($(outdir)/%.pdf): use +lilypond.map to
	get scalable cm fonts too.

	* stepmake/stepmake/metafont-rules.make (ENCODINGOPTION): add
	--encoding for mftrace if present.

	* input/regression/slur-area.ly: move from test/

	* input/test/: : remove simple-slur-endings slur-attachment
	slur-broken-cross-staff slur-broken.ly slur-damping.ly
	slur-follow-music.ly slur-position.ly slur-proof.ly slur-shape.ly
	slur-symmetry slur-symmetry tie-broken.ly

	* scm/drums.scm (set-drum-kit): add function.

	* Documentation/user/refman.itely (Percussion staves): use
	set-drum-kit

	* scripts/etf2ly.py (interpret_finale_key_sig): handle minor keys
	too
	(Global_measure.set_timesig): handle 3/8 time sig too.
